--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   run_if:
-    if: ${{ github.head_ref === 'figma-tokens' }}
+    if: ${{ github.head_ref == 'figma-tokens' }}
     name: Process Figma Tokens
     runs-on: ubuntu-latest
     timeout-minutes: 5
