--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - uses: action/checkout@master
+      - uses: actions/checkout@master
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
@@ -23,7 +23,7 @@ jobs:
       - name: Run style-dictionary
         run: npx style-dictionary build --config sd.config.cjs
 
-      - name: Commit Changes
+      - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
           author_name: Example
