--- a/.github/workflows/figma-tokens-pr.yaml
+++ b/.github/workflows/figma-tokens-pr.yaml
@@ -29,4 +29,4 @@ jobs:
           author_name: Example
           author_email: example@gmail.com
           message: 'chore style-dictionary output'
-          add: '_'
+          add: '.'
